# awesome-dl

./: .gitignore  .gitlab-ci.yml  Dockerfile  INSTALL.md  README.md  SECURITY.md  awesome.db  main.py  pyproject.toml
.circleci/: config.yml
awesomedl/: __init__.py  depends.py  main.py  util.py  vars.py
awesomedl/backend/: __init__.py  root.py  ytdl.py
awesomedl/client/: ytdl.py
awesomedl/config/: __init__.py
awesomedl/datasource/: sqlite.py
awesomedl/depends/: __init__.py
awesomedl/logic/: output.py  progress.py  ytdl.py
awesomedl/model/: __init__.py  task.py  views.py
awesomedl/process/: output.py  task_processor.py
awesomedl/queue/: __init__.py
awesomedl/service/: ytdl.py
awesomedl/task/: __init__.py  queue.py
awesomedl/tasks/: __init__.py  queue.py
conf/freebsd/: rc.conf
frontend/: .env.production  package.json
frontend/src/: App.css  App.tsx
frontend/src/appbar/: index.tsx
frontend/src/client/: index.ts  typing.ts
frontend/src/config/: index.ts
frontend/src/error/: types.ts
frontend/src/options/: Downloads.tsx  Options.tsx  Settings.tsx  styles.scss
frontend/src/popup/: Popup.tsx  styles.scss
frontend/src/settings/: index.tsx  settings.tsx
frontend/src/styles/: _fonts.scss
frontend/src/tasks/: add.tsx  index.tsx  list.tsx
test/fun/: test_api.py
test/unit/: test_config.py  test_datasource.py  test_logic.py  test_process.py
