[tool.poetry]
name = "awesome-dl"
version = "0.3.0"
description = ""
authors = ["Cameron Ruatta <c@ruatta.com>"]
license = "MIT"

packages = [
    { include = "awesomedl" }
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
youtube-dl = "^2020.5.8"
uvicorn = "^0.11.5"
databases = {extras = ["sqlite"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pytest = "^5.4.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
