[tool.poetry]
name = "awesome-dl"
version = "0.6.1"
description = "An awesome download manager"
authors = ["Cameron Ruatta <c@ruatta.com>"]
license = "MIT"

packages = [
    { include = "awesomedl" }
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
youtube-dl = "^2020.12.29"
uvicorn = "^0.13.3"
databases = {extras = ["sqlite"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.12.0"
pytest-mypy = "^0.6.2"
flake8 = "^3.8.2"
mypy = "^0.770"
pytest-flake8 = "^1.0.6"
pytest-mock = "^3.1.0"
pytest-cov = "^2.9.0"
aiofiles = "^0.5.0"
requests = "^2.23.0"
python-language-server = "^0.34.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
